--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,78 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>SFEFRONT</title>
-  <base href="/">
 
+<head>
+  <base href="/">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>EPS - Educational Personal Space </title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700|Material+Icons" rel="stylesheet">
+  <style type="text/css">
+    .loading::before,
+    .loading::after {
+      position: fixed;
+      z-index: 3000;
+      top: 0;
+      left: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+    }
+
+    .logo {
+      width: 128px;
+      position: fixed;
+      z-index: 3000;
+      top: 0;
+      left: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 80%;
+    }
+    .logo img {
+      filter: drop-shadow(0px 10px 6px rgba(0, 0, 0, 0.2))
+    }
+
+    .loading::before {
+      content: '';
+    }
+
+    .loading::after {
+      font-family: "Helvetica Neue", Helvetica, sans-serif;
+      content: 'LOADING';
+      text-align: center;
+      white-space: pre;
+      font-weight: normal;
+      font-size: 24px;
+      letter-spacing: 0.04rem;
+      color: #000;
+      opacity: 0.8;
+      animation: animation 1s alternate infinite;
+    }
+
+    @keyframes animation {
+      to {
+        opacity: 0.2;
+      }
+    }
+  </style>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div class="logo">
+      <img width="128" src="assets/images/logos/fuse.svg">
+    </div>
+    <div class="loading"></div>
+  </app-root>
 </body>
+
 </html>
